[package]
name = "locky-puzzle"
version = "0.1.0"
authors = ["Alex Nichol <unixpickle@gmail.com>"]

[lib]
name = "locky_puzzle"
path = "src/mod.rs"

[[bin]]
name = "bench-heuristic"
path = "src/bench/bench_heuristic.rs"

[[bin]]
name = "bench-solve"
path = "src/bench/bench_solve.rs"

[[bin]]
name = "locky-solve"
path = "src/locky_solve/main.rs"

[dependencies]
clap = "2.31"
